--- a/frontend/front.html
+++ b/frontend/front.html
@@ -3,26 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Front visual</title>
+    <title>CRUD Usuarios</title>
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+    <!-- Bootstrap Icons CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
+
+  </head>
 <body>
+  <div class="container container-sm pt-4">
+      <table class="table table-striped" id="tablaUsuarios">
+          <thead>
+            <tr class="table-dark">
+              <th scope="col">ID</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Edad</th>
+              <th scope="col">Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="front"></tbody>
+      </table>
+      <div >
+        <button type="button" class="btn btn-primary" id="abrirModalAgregar" onclick="openModalAgregar()">
+          <i class="bi bi-person-plus"></i>
+        </button>
+      </div>
+  </div>
 
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Edad</th>
-          </tr>
-        </thead>
-        <tbody id="front"></tbody>        
-    </table>
+  <!-- Modal -->
+  <div class="modal fade" id="modalUsuario" tabindex="-1" aria-labelledby="modalUsuario" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Agregar Usuario</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <label for="name">Nombre</label>
+          <input type="text" class="form-control" id="name">
+          <br>
+          <label for="age">Edad</label>
+          <input type="number" class="form-control" id="age">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            <i class="bi bi-floppy"></i>
+             Cancelar
+          </button>
+          <button type="button" class="btn btn-primary" id="botonGuardar">
+            <i class="bi bi-floppy"></i>
+             Guardar
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-    <button class="btn btn-success" id="modal" onclick="openModal()">Agregar Usuario</button>
-    
+  <!-- <script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js"></script>
+  <script language="JavaScript" type="text/javascript" src="/js/jquery-ui-personalized-1.5.2.packed.js"></script> -->
 
-    <script src="front.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="front.js"></script>
 </body>
 </html>
